--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-paypal-button-v2": "^2.6.1",
     "react-router-dom": "^5.1.2",
     "resolve": "1.12.0",
