--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "mobx-react-devtools": "^6.1.1",
+    "native-base": "^2.13.8",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
